--- a/src/App.css
+++ b/src/App.css
@@ -98,9 +98,8 @@ input[type='number'] {
 
 .btn {
   cursor: pointer;
-  background-color: #9c88ff;
+  background-color: #FECF49;
   box-shadow: var(--box-shadow);
-  color: #fff;
   border: 0;
   display: block;
   font-size: 16px;
