--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body {
   justify-content: center;
   min-height: 100vh;
   margin: 0;
+  font-size: 16px;
   font-family: 'Lato', sans-serif;
 }
 
@@ -122,7 +123,7 @@ input[type='number'] {
 .list li {
   background-color: #fff;
   box-shadow: var(--box-shadow);
-  color: #333;
+  color: #777;
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -136,6 +137,10 @@ input[type='number'] {
 
 .list li.minus {
   border-right: 5px solid #c0392b;
+}
+
+.list span {
+  color: #333;
 }
 
 .delete-btn {
